@@ -226,7 +226,7 @@ Creation of a new Parser by calling
 	    <p>
 
 	      The source for the parsing process is not specified - so
-	      parsing must be done incfrementally by feeding data to the
+	      parsing must be done incrementally by feeding data to the
 	      parser.
 	    </p>
 
@@ -280,9 +280,8 @@ Creation of a new Parser by calling
 	    <p>
 
 	      Sets the input source for the parser to be the specified data
-	      object (which must contain a nul terminated XML document),
-	      so parsing of the entire document will be performed rather than
-	      incremental parsing.
+	      object (which must contain an XML document), so parsing of the
+	      entire document will be performed rather than incremental parsing.
 	    </p>
 
           
@@ -300,7 +299,8 @@ Return pointer to xmlParserCtxt structure.
 - (GSXMLDocument*) <b>doc</b>;<br>
 
 	    <p>
-Return GSXMLDocument object.
+
+	      Return GSXMLDocument object.
             </p>
 
           
@@ -311,7 +311,7 @@ Return GSXMLDocument object.
 	    <p>
 
 	      Parse source. Return YES if parsed, otherwise NO.
-	      This method should be called once to parse the entiore document.
+	      This method should be called once to parse the entire document.
             </p>
 
             <a name ="label-18">example </a>
@@ -343,8 +343,8 @@ Return GSXMLDocument object.
 	      block of data from the same document.  After the whole of the
 	      document has been parsed, the method should be called with
 	      an empty or nil data object to indicate end of parsing.
-	      Once this has been done, the method may be used again to
-	      parse a new document.
+	      On this final call, the return value indicates whether the
+	      document was valid or not.
             </p>
 
             <a name ="label-20">example </a>
@@ -361,7 +361,7 @@ Return GSXMLDocument object.
     }
     // Do something with document parsed
 
-    [p parse: nil];  // Ready to parse another document.
+    [p parse: nil];  // Completed parsing of document.
 
             
  </pre>
@@ -373,7 +373,7 @@ Return GSXMLDocument object.
 
           <p>
 
-	    Set and return the previous value for default entity support.
+	    Set and return the previous value for entity support.
             Initially the parser always keeps entity references instead
 	    of substituting entity values in the output.
           </p>
@@ -385,8 +385,7 @@ Return GSXMLDocument object.
 
 	    <p>
 
-	      Set and return the previous value for default blanks
-	      text nodes support.
+	      Set and return the previous value for blank text nodes support.
 	      ignorableWhitespace() are only generated when running
 	      the parser in validating mode and when the current element
 	      doesn't allow CDATA or mixed content.
