@@ -51,16 +51,20 @@
 <h3><a name ="method-0">URLWithString:</a></h3>
 + (id) <b>URLWithString:</b> (NSString*)URLString;<br>
 
+	    Initializes with a string as specified in RFCs 1738 and 1808
           
  <hr>
 <h3><a name ="method-1">URLWithString:relativeToURL:</a></h3>
 + (id) <b>URLWithString:</b> (NSString*)URLString <b>relativeToURL:</b> (NSURL*)baseURL;<br>
 
+	    Initializes relative to a base URL, with a string as
+	    specified in RFCs 1738 and 1808
           
  <hr>
 <h3><a name ="method-2">fileURLWithPath:</a></h3>
 + (id) <b>fileURLWithPath:</b> (NSString*)path;<br>
 
+	    Initializes as a file schem URL with the specified path.
           
  <hr>
 <hr><h2>Instances Methods </h2>
