@@ -52,21 +52,27 @@
 <h3><a name ="method-0">URLHandleClassForURL:</a></h3>
 + (Class) <b>URLHandleClassForURL:</b> (NSURL*)anURL;<br>
 
+	    Returns the most recently registered NSURLHandle subclass that
+	    responds to <code>canInitWithURL:</code> with <code>YES</code>
           
  <hr>
 <h3><a name ="method-1">cachedHandleForURL:</a></h3>
 + (NSURLHandle*) <b>cachedHandleForURL:</b> (NSURL*)anURL;<br>
 
+	    Returns a previously created object that handles the specified
+	    URL (if any exists).
           
  <hr>
 <h3><a name ="method-2">canInitWithURL:</a></h3>
 + (BOOL) <b>canInitWithURL:</b> (NSURL*)anURL;<br>
 
+	    Implemented by subclasses to say which URLs they can handle.
           
  <hr>
 <h3><a name ="method-3">registerURLHandleClass:</a></h3>
 + (void) <b>registerURLHandleClass:</b> (Class)anURLHandleSubclass;<br>
 
+	    Used to register a subclass as being available to handle URLs.
           
  <hr>
 <hr><h2>Instances Methods </h2>
